Closed Bug 1240867 Opened 9 years ago Closed 9 years ago

Compile errors due to missing includes

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla46
Tracking Status
firefox46 --- fixed

People

(Reporter: kats, Assigned: kats)

References

Details

Attachments

(2 files, 1 obsolete file)

I add a new file to the gfx/layers unified build and it caused bustage: c:/builds/moz2_slave/try-w32-mulet-0000000000000000/build/src/gfx/layers/client/ImageClient.cpp(326) : error C2664: 'void mozilla::layers::ShadowLayerForwarder::AttachAsyncCompositable(uint64_t,mozilla::layers::ShadowableLayer *)' : cannot convert argument 2 from 'mozilla::layers::ClientLayer *' to 'mozilla::layers::ShadowableLayer *' ImageClient.cpp doesn't know that ClientLayer is a subclass of ShadowableLayer because all it has is the forward declaration in ImageClient.h
Attached patch PatchSplinter Review
Assignee: nobody → bugmail.mozilla
Attachment #8709589 - Flags: review?(nical.bugzilla)
There's also this one: c:/builds/moz2_slave/try-w32-mulet-0000000000000000/build/src/gfx/layers/opengl/OGLShaderProgram.cpp(165) : error C2065: 'CompositionOp' : undeclared identifier because OGLShaderProgram.cpp isn't including gfx/2d/Types.h.
Attached patch Part 2 - Another missing include (obsolete) — Splinter Review
Attachment #8709591 - Flags: review?(nical.bugzilla)
Summary: Compile error due to missing include → Compile errors due to missing includes
Comment on attachment 8709591 [details] [diff] [review] Part 2 - Another missing include This one doesn't seem to fix the error for some reason. Stupid un-locally-reproducible unified build bustages :(
Attachment #8709591 - Flags: review?(nical.bugzilla)
Attached patch Part 2 patchSplinter Review
Ok, here we go.
Attachment #8709591 - Attachment is obsolete: true
Attachment #8709599 - Flags: review?(nical.bugzilla)
Attachment #8709589 - Flags: review?(nical.bugzilla) → review+
Attachment #8709599 - Flags: review?(nical.bugzilla) → review+
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: