Bug 1240867 - Add missing include. r=nical